--- a/index.html
+++ b/index.html
@@ -17,10 +17,11 @@
             <a href="GraficosInteractivos.html" class="grid-item">Factores y riesgo calculados</a>
             <a href="GraficosInteractivosRutasDias.html" class="grid-item">Resumen de anillamientos (día)</a>
             <a href="GraficosInteractivosRutasTemporal.html" class="grid-item">Resumen de anillamientos (serie completa)</a>
-            <a href="" class="grid-item">Visor DiFLUsion (Acceso restringido)</a>
+            <a href="https://gis.inia.es/diflusion/" class="grid-item">Visor DiFLUsion (Acceso restringido)</a>
             <a href="https://sgaicsic.maps.arcgis.com/apps/dashboards/8fd044ccc072431e919133b2949f350f" class="grid-item" target="_blank" rel="noopener noreferrer">DahFLUboard</a>
 
         </div>
     </main>
 </body>
 </html>
+
